# schedule_module

./: Cargo.toml  CourseScheduleFall2020.ics  LICENSE  README.md  courses.json
src/: .main.rs.swp  main.rs
