[package]
name = "courses"
version = "0.1.0"
authors = ["jf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ical = { version = "0.6.*", default-features=false, features = ["ical", "vcard"] }

